// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: <Menu/> should highlight menu item should highlight selected items based on pathname 1`] = `
<Menu
  className="Menu"
  mode="horizontal"
  selectedKeys={
    Array [
      "/welcome",
    ]
  }
  theme="light"
>
  <MenuItem
    className="Menu__item"
    key="/welcome"
  >
    <Link
      className="Menu__link"
      replace={false}
      to="/welcome"
    >
      <span>
        Welcome
      </span>
    </Link>
  </MenuItem>
  <MenuItem
    className="Menu__item"
    key="/payments"
  >
    <Link
      className="Menu__link"
      replace={false}
      to="/payments"
    >
      <span>
        Payments
      </span>
    </Link>
  </MenuItem>
  <MenuItem
    className="Menu__item"
    key="/contractors"
  >
    <Link
      className="Menu__link"
      replace={false}
      to="/contractors"
    >
      <span>
        Contractors
      </span>
    </Link>
  </MenuItem>
</Menu>
`;

exports[`component: <Menu/> should highlight menu item should highlight selected items based on pathname 2`] = `
<Menu
  className="Menu"
  mode="horizontal"
  selectedKeys={
    Array [
      "/payments",
    ]
  }
  theme="light"
>
  <MenuItem
    className="Menu__item"
    key="/welcome"
  >
    <Link
      className="Menu__link"
      replace={false}
      to="/welcome"
    >
      <span>
        Welcome
      </span>
    </Link>
  </MenuItem>
  <MenuItem
    className="Menu__item"
    key="/payments"
  >
    <Link
      className="Menu__link"
      replace={false}
      to="/payments"
    >
      <span>
        Payments
      </span>
    </Link>
  </MenuItem>
  <MenuItem
    className="Menu__item"
    key="/contractors"
  >
    <Link
      className="Menu__link"
      replace={false}
      to="/contractors"
    >
      <span>
        Contractors
      </span>
    </Link>
  </MenuItem>
</Menu>
`;

exports[`component: <Menu/> should highlight menu item should render correct 1`] = `
Array [
  <MenuItem
    className="Menu__item"
>
    <Link
        className="Menu__link"
        replace={false}
        to="/example1"
    >
        <span>
            First
        </span>
    </Link>
</MenuItem>,
  <MenuItem
    className="Menu__item"
>
    <Link
        className="Menu__link"
        replace={false}
        to="/example2"
    >
        <span>
            Second
        </span>
    </Link>
</MenuItem>,
  <MenuItem
    className="Menu__item"
>
    <Link
        className="Menu__link"
        replace={false}
        to="/example3"
    >
        <span>
            Third
        </span>
    </Link>
</MenuItem>,
]
`;
